# CS_Masters

year_I/ComputationalComplexity/: README.md
year_I/ComputationalComplexity/homework1/: homework1.tex
year_I/ComputationalComplexity/homework2/: homework2a.tex  homework2b.tex
year_I/ComputationalComplexity/homework3/: homework3.tex
year_I/DS/: README.md
year_I/DS/entry/: .gitignore  CMakeLists.txt  bigint.cpp  bigint.h  build.sh  client.cpp  client.sh  common.cpp  common.h  package.sh  semaphore.cpp  semaphore.h  server.cpp  server.sh  tests.py  threadpool.cpp  threadpool.h
year_I/DS/presentation/: presentation.odp
year_I/GSN/: .gitignore  README.md
year_I/GSN/lab1/: Exercise 1.ipynb  Exercise 2.ipynb  Exercise 3.ipynb  regression.py  regression_good.py
year_I/GSN/lab10/: Torch_Embeddings.ipynb
year_I/GSN/lab2/: Exercise 4 - Logistic Regression.ipynb  Exercise 5 - Softmax Regression.ipynb
year_I/GSN/lab3/: Exercise_6_P3.ipynb  nn2.py  test.py
year_I/GSN/lab4/: Exercise_7_Minibatch_P3.ipynb
year_I/GSN/lab5/: pytorch_t1.py  pytorch_t2.py  pytorch_t3.py  pytorch_t4_data.py  pytorch_t4_nn.py
year_I/GSN/lab6/: lab6.py
year_I/GSN/task1/: .gitignore  README.txt  image_net.py  make_solution_zip.sh
year_I/LDI/: README.md
year_I/MRJP/: .gitignore  README.md
year_I/MRJP/latte/: Makefile  (+6 more)
year_I/PUL/: README.md  create_img.sh  run.sh
year_I/SAD/: .gitignore  README.md  sad1.R  sad_praca_domowa_1.R
year_I/VRNN/: .gitignore  README.md
year_I/ZBD/: .gitignore  Data_model.dia  README.md  api_test.py  convert_to_json.py  notes.txt
year_I/ZPI/: README.md
year_I/ZSO/: .gitignore  README.md  create_image.sh  run_image.sh
year_I/ZSO/zad1/: .gitignore  CMakeLists.txt  README.txt  asm.h  asm.s  cross_call.c  cross_call.h  crossld.c  crossld.h  crossld_helper.c  crossld_helper.h  dynamic_load.c  dynamic_load.h  elf_loader.c  elf_loader.h  utils.c  utils.h
year_I/microcontrollers/: README.md
year_I/microcontrollers/task-large/: .gitignore  Cargo.toml  Makefile  build.rs
year_I/microcontrollers/task-large/libconfig/: CMakeLists.txt  config.c  gpio.c
year_I/microcontrollers/task-large/libconfig/inc/: stm32.h
year_I/microcontrollers/task-large/src/: command_parser.rs  config.rs  dma.rs  leds.rs  main.rs  rotational_encoder.rs
(+396 files in other folders)
