[package]
authors = ["Filip Plata <filip.plata@outlook.com>"]
edition = "2018"
name = "task-large"
version = "0.1.0"
build = "build.rs"

[profile.release]
opt-level = "s"

[dependencies]
cortex-m = ">=0.5.8,<0.7"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
heapless = "0.5.1"

[dependencies.stm32f4]
version = "0.9.0"
features = ["stm32f411", "rt"]

[build-dependencies]
cmake = "0.1.31"
